--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   video_player: ^2.8.6
   chewie: ^1.8.1
   flutter_spinkit: ^5.2.0
+  model_viewer_plus: ^1.7.0
+  google_generative_ai: any
 
   # Utilities
   supabase_flutter: ^2.0.0
